--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
 
 - text: Home
   url: /
-- text: O mnie
-  url: /about
+#- text: O mnie
+#  url: /about
 - text: Kontakt
   url: /contact
 - text: Blog
